# thyrida

./: .coveragerc  .gitignore  CHANGES.txt  README.rst  debug.ini  pyproject.toml  setup.py  tox.ini
src/ws/thyrida/: application.py  db.py  interfaces.py  mailbox.py
src/ws/thyrida/templates/: password.html
src/ws/thyrida/tests/: conftest.py  schema.sql  test_mailbox.py
